--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="vendor/bootstrap-additions/dist/bootstrap-additions.css">
     <link rel="stylesheet" href="css/angularStrap-modal-animation.css">
     <link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body ng-app="linkositoryApp">
 
@@ -40,6 +41,7 @@
       <script src="js/controllers/BookmarkController.js" ></script>
       <script src="js/controllers/SearchController.js" ></script>
       <script src="js/controllers/EditController.js" ></script>
+      <script src="js/controllers/EmailController.js" ></script>
       <script src="js/app.js" ></script>
 
 
